Changed z-index of navbar and background to fix the problem with social media icons not clickable

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,3 +15,6 @@
      background-image: url('../../assets/images/hamburguer.svg');
      background-size: 80%;
  }
+.navbar {
+    z-index: 9999
+}
